split up code, tweak colors, add building.

--- a/GPLib/GraphTest/P51Movie/P51Movie.csproj
+++ b/GPLib/GraphTest/P51Movie/P51Movie.csproj
@@ -47,8 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Backgrounds.cs" />
+    <Compile Include="Buildings.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TankModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Drawables\Drawables.csproj">
