--- a/GPLib/GraphTest/P51Movie/P51Movie.csproj
+++ b/GPLib/GraphTest/P51Movie/P51Movie.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Backgrounds.cs" />
     <Compile Include="Buildings.cs" />
+    <Compile Include="BZGround.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TankModel.cs" />
@@ -57,6 +58,10 @@
     <ProjectReference Include="..\..\Drawables\Drawables.csproj">
       <Project>{71452148-876E-4B8E-9244-A8F014CF72E6}</Project>
       <Name>Drawables</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Math\Math3D.csproj">
+      <Project>{0BC4671F-FF72-4D3E-9889-44382F6C64F2}</Project>
+      <Name>Math3D</Name>
     </ProjectReference>
     <ProjectReference Include="..\GraphTest.csproj">
       <Project>{A5D1F999-EDB8-402D-B04A-768A0B59813D}</Project>
