--- a/Common/Host/Host.csproj
+++ b/Common/Host/Host.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{2EE0E321-3FC6-4B3A-9F13-C34B8B49D7B5}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -56,7 +56,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\graphicslib\Common\lidgren-network\Lidgren.Network\Lidgren.Network.csproj">
+    <ProjectReference Include="..\lidgren-network\Lidgren.Network\Lidgren.Network.csproj">
       <Project>{BA202214-F6F8-4853-BCC9-CA4F13C5F479}</Project>
       <Name>Lidgren.Network</Name>
     </ProjectReference>
