--- a/GPLib/GUIGameWindow/GUIGameWindow.csproj
+++ b/GPLib/GUIGameWindow/GUIGameWindow.csproj
@@ -71,8 +71,8 @@
     <Compile Include="GUIGameWindowBase.Designer.cs">
       <DependentUpon>GUIGameWindowBase.cs</DependentUpon>
     </Compile>
-    <Compile Include="KeyboardDevice.cs" />
-    <Compile Include="MouseDevice.cs" />
+    <Compile Include="GUIKeyboardDevice.cs" />
+    <Compile Include="GUIMouseDevice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -94,6 +94,12 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Input\Input.csproj">
+      <Project>{8B7D0C7E-9599-4DC7-9C01-6390986150DC}</Project>
+      <Name>Input</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
